# insdraw

./: Cargo.toml  README.md  vert.spv
assets/effects/example/: example.frag  example.frag.spv  example.vert  example.vert.spv
assets/effects/uniform-pbr/: uniform-pbr.frag  uniform-pbr.frag.spv
src/: main.rs  math.rs
src/gfx/: alloc.rs  contract.rs  ctxt.rs  error.rs  mem.rs  mod.rs  spv.rs  surf.rs  sym.rs
src/math/: mod.rs  plain.rs
src/scene/: mod.rs
src/spv/: consts.rs  error.rs  instr.rs  mod.rs  parse.rs  reflect.rs  sym.rs
