[package]
name = "insdraw"
version = "0.1.0"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.29.0"
log = "0.4.8"
env_logger = "0.7.1"
bytes = "0.4.12"
byteorder = "1.3.2"
failure = "0.1.6"
num-traits = "0.2"
num-derive = "0.3"
spirq = "0.4.1"
winit = "0.20.0-alpha5"
lazy_static = "1.4.0"
